--- a/.Archive/readMe.md/2020-03-24 23-03-32.md
+++ b/.Archive/readMe.md/2020-03-24 23-03-32.md
@@ -1,16 +1,15 @@
 # readMe
 
 ## 功能介绍
-- 核心功能组件：
-    - api gateway
+- 核心组件：
+    - gateway
     - 注册中心 （consul）
-    - [x] 配置中心
+    - 配置中心
     - 熔断
-    - 链路追踪
+    - tracer
     - jwt
     - metrics
-    - [x] 日志推送es
-    - 健康检查
+    - [ X日志推送es
 
 ### 相关组件运行
 - jaeger
